--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "moment": "^2.29.1",
     "react": "17.0.2",
+    "react-moment": "^1.1.1",
     "react-native": "0.67.3",
     "react-native-gesture-handler": "^2.3.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
