--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-moment": "^1.1.1",
     "react-native": "0.67.3",
+    "react-native-calendars": "^1.1279.0",
     "react-native-gesture-handler": "^2.3.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^0.30.1",
