--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^14.9.1",
+    "@react-native-firebase/messaging": "^14.9.1",
     "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
