--- a/ios/SmartStudent/Info.plist
+++ b/ios/SmartStudent/Info.plist
@@ -4,6 +4,14 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) Need camera to take photos of parents and save them on th server</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) Need camera to take photos of parents and save them on th server</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>$(PRODUCT_NAME) Need camera to take photos of parents and save them on th server</string>
+	<key>LSApplicationCategoryType</key>
+	<dict/>
 	<key>CFBundleDisplayName</key>
 	<string>SmartStudent</string>
 	<key>CFBundleExecutable</key>
@@ -26,6 +34,8 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
@@ -37,6 +47,11 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
